<resources>
    <string name="app_name">Market Basket Analysis</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="grow_rate">Grow Rate</string>
    <string name="support_rate">Support Rate</string>
    <string name="datasets">Datasets</string>
    <string name="compute">Compute</string>
    <string name="baskets">baskets</string>
    <string name="frequent_patterns">Frequent Patterns</string>
    <string name="emerging_patterns">Emerging Patterns</string>
    <string name="invalid_support_rate">Invalid support rate!</string>
    <string name="invalid_grow_rate">Invalid grow rate!</string>
    <string name="frequent_pattern_miner_error">Could not retrieve the Frequent Pattern</string>
    <string name="emerging_pattern_miner_error">Could not retrieve the Emerging Pattern</string>
    <string name="loaded_from_cache">Loaded from cache</string>
</resources>